cmake_minimum_required(VERSION 3.14)
project(atcoder_practice_in_cpp)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(115)
add_subdirectory(116)
add_subdirectory(117)
add_subdirectory(118)
add_subdirectory(119)
add_subdirectory(120)
add_subdirectory(121)
add_subdirectory(122)
add_subdirectory(123)
add_subdirectory(124)
add_subdirectory(125)
add_subdirectory(126)
add_subdirectory(127)
add_subdirectory(128)
add_subdirectory(129)
add_subdirectory(130)
add_subdirectory(131)
add_subdirectory(132)
add_subdirectory(133)
add_subdirectory(134)
add_subdirectory(135)
add_subdirectory(136)
add_subdirectory(137)
add_subdirectory(138)
add_subdirectory(139)
add_subdirectory(140)
