cmake_minimum_required(VERSION 3.14)
project(atcoder_practice_in_cpp)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(87)
add_subdirectory(88)
add_subdirectory(89)
add_subdirectory(90)
add_subdirectory(91)
add_subdirectory(92)
add_subdirectory(93)
add_subdirectory(94)
add_subdirectory(95)
add_subdirectory(96)
add_subdirectory(97)
add_subdirectory(98)
add_subdirectory(99)
add_subdirectory(100)
add_subdirectory(101)
add_subdirectory(102)
add_subdirectory(103)
add_subdirectory(104)
add_subdirectory(105)
add_subdirectory(106)
add_subdirectory(107)
add_subdirectory(108)
add_subdirectory(109)
add_subdirectory(110)
add_subdirectory(111)
add_subdirectory(112)
add_subdirectory(113)
add_subdirectory(114)
add_subdirectory(115)
add_subdirectory(116)
add_subdirectory(117)
add_subdirectory(118)
add_subdirectory(119)
add_subdirectory(120)
add_subdirectory(121)
add_subdirectory(122)
add_subdirectory(123)
add_subdirectory(124)
add_subdirectory(125)
add_subdirectory(126)
add_subdirectory(127)
add_subdirectory(128)
add_subdirectory(129)
add_subdirectory(130)
add_subdirectory(131)
add_subdirectory(132)
add_subdirectory(133)
add_subdirectory(134)
add_subdirectory(135)
add_subdirectory(136)
add_subdirectory(137)
add_subdirectory(138)
add_subdirectory(139)
add_subdirectory(140)
